--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,21 @@
 * {
   margin: 0;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(32, 34, 37, 0.4);
+  border-radius: 99px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #202225;
+  border-radius: 99px;
+}
+
+
