--- a/src/components/css/LoginRegister.css
+++ b/src/components/css/LoginRegister.css
@@ -1,4 +1,5 @@
 .login, .register {
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -102,4 +103,17 @@
 
 .login__register button:hover, .register__login button:hover {
     text-decoration: underline;
+}
+
+.register__error {
+    color: #f04747 !important;
+}
+
+.register__error span {
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.register__errorInput {
+    border-color: #f04747 !important;
 }
