--- a/src/components/css/HomeSidebar.css
+++ b/src/components/css/HomeSidebar.css
@@ -102,11 +102,11 @@
   margin: 16px 0;
 }
 
-.homeSidebar__modalContent form {
+.homeSidebar__modelContentTop {
     padding: 0 16px;
 }
 
-.homeSidebar__modalContent form div {
+.homeSidebar__modelContentTop div {
   width: 100%;
   text-align: left;
   height: 40px;
@@ -122,7 +122,7 @@
   align-items: center;
 }
 
-.homeSidebar__modalContent form label {
+.homeSidebar__modelContentTop label {
   color: #dcddde;
   margin-bottom: 8px;
   font-size: 12px;
@@ -131,7 +131,7 @@
   display: inline-block;
 }
 
-.homeSidebar__modalContent form input {
+.homeSidebar__modelContentTop input {
   border: none;
   outline: none;
   background-color: transparent;
@@ -140,7 +140,7 @@
   color: #dcddde;
 }
 
-.homeSidebar__modalContent form div span {
+.homeSidebar__modelContentTop div span {
   font-size: 24px;
   margin: 0 10px;
   cursor: default;
@@ -165,7 +165,6 @@
 
 .homeSidebar__modelContentBottom button:last-of-type {
     background-color: #7289da;
-
 }
 
 .homeSidebar__modelContentBottom button:first-of-type:hover{
