--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: rgba(32, 34, 37, 0.4);
+  background-color: rgba(32, 34, 37, 0.55);
   border-radius: 99px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #202225;
+  background-color: #1a1b1d;
   border-radius: 99px;
 }
 
